@@ -1,2 +1,1 @@
 usr/share/misc/usb.ids usr/share/kcmusb/usb.ids
-var/lib/ieee-data/kinfocenter_oui.db usr/share/kcmview1394/oui.db
